--- a/backend/users/templates/base_dashboard.html
+++ b/backend/users/templates/base_dashboard.html
@@ -31,8 +31,8 @@
             <li><a href="/users/resumen">🏠 Resumen</a></li>
             <li><a href="/users/products">📦 Productos</a></li>
             <li><a href="/users/pedidos">🛒 Pedidos</a></li>
-            <li>👥 Usuarios</li>
-            <li>🚚 Domicilios</li>
+            <li><a href="/users/usuarios">👥 Usuarios</a></li>
+            <li><a href="/users/domicilios">🚚 Domicilios</a></li>
             <li><a href="/users/configuracion">⚙ Configuración</a></li>
             <li>🔓 Cerrar sesión</li>
         </ul>
