--- a/backend/users/templates/dashboard_admin.html
+++ b/backend/users/templates/dashboard_admin.html
@@ -14,10 +14,10 @@
         <h2 class="logo">Mis Viejos</h2>
         <ul class="menu">
             <li class="active">🏠 Resumen</li>
-            <li>📦 Productos</li>
-            <li>🛒 Pedidos</li>
-            <li>👥 Usuarios</li>
-            <li>🚚 Domicilios</li>
+            <li><a href="/users/products">📦 Productos</a></li>
+            <li><a href="/users/pedidos">🛒 Pedidos</a></li>
+            <li><a href="/users/usuarios">👥 Usuarios</a></li>
+            <li><a href="/users/domicilios">🚚 Domicilios</a></li>
             <li><a href="/users/configuracion">⚙ Configuración</a></li>
             <li>🔓 Cerrar sesión</li>
         </ul>
